[package]
name = "current-thread-runtime"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"

[dependencies]
tokio-executor = { path = "../tokio/tokio-executor" }
tokio-current-thread = { path = "../tokio/tokio-current-thread" }
tokio = { path = "../tokio/" }
tokio-timer = { path = "../tokio/tokio-timer" }
tokio-reactor = { path = "../tokio/tokio-reactor" }
futures = "0.1"
