[package]
name = "current-thread-runtime"
version = "0.1.0"
authors = ["Alexander Polakov <plhk@sdf.org>"]
edition = "2018"

[dependencies]
tokio-executor = { git = "https://github.com/polachok/tokio", rev = "58f087" }
tokio-current-thread = { git = "https://github.com/polachok/tokio", rev = "58f087" }
tokio = { git = "https://github.com/polachok/tokio", rev = "58f087" }
tokio-timer = { git = "https://github.com/polachok/tokio", rev = "58f087" }
tokio-reactor = { git = "https://github.com/polachok/tokio", rev = "58f087" }
futures = "0.1"
